--- a/pid-reservations/src/main/resources/application.properties
+++ b/pid-reservations/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.application.name=pid-reservations
 spring.datasource.url=jdbc:mysql://localhost:3306/reservations?useSSL=false&serverTimezone=Europe/Brussels
 spring.datasource.username=root
 spring.datasource.password=Betteranh64!
-spring.jpa.hibernate.ddl-auto=update
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Flyway
 spring.flyway.baseline-on-migrate=true
 
