--- a/pid-reservations/src/main/resources/application.properties
+++ b/pid-reservations/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Flyway
 spring.flyway.baseline-on-migrate=true
 
+# Enable use of hidden input to override HTML method in form (put & delete)
+spring.mvc.hiddenmethod.filter.enabled=true
