--- a/pid-reservations/src/main/resources/application.properties
+++ b/pid-reservations/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/reservations?useSSL=false&serv
 spring.datasource.username=root
 spring.datasource.password=Betteranh64!
 
-# Hibernate
+# Hibernate ..none, validate, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
