--- a/pid-reservations/src/main/resources/application.properties
+++ b/pid-reservations/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=Betteranh64!
 
 # Hibernate ..none, validate, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Flyway
